fix navbar on small screens

--- a/css/default.css
+++ b/css/default.css
@@ -102,32 +102,10 @@ section, .references {
     text-indent: -1.2em;
     margin-left: 1.2em;
 }
-.pure-menu.pure-menu-horizontal>ul {
-    display: inline;
-}
-.pure-menu li a {
-    padding: 5px 10px;
-}
 footer {
     padding: 20px; 
     background-color: #f3f3f3;
 }
-
-@media (min-width: 35.5em) {
-    .pure-menu li a {
-        padding: 5px 20px;
-    }
-}
-
-@media (min-width: 48em) {
-    .internal-links {
-        float: left;
-    }
-    .external-links {
-        float: right;
-    }
-}
-
 @media (min-width: 72em) {
     nav.toc {
         position: fixed;
